# chatsight

./: .dockerignore  .env.example  .gitignore  ANALYSIS_AI_VS_HUMAN_PLAN.md  CLAUDE.md  Dockerfile  GEMINI.md  README.md  TODO.md  WORKFLOW.md  configs.py  database.db  index.html  package-lock.json  package.json  vite.config.ts
server/python/: analysis_single_label.py  app.py  assignment_service.py  assist_service.py  autolabel_service.py  binary_autolabel_service.py  chat_routes.py  concept_generation.py  concept_retrieval.py  concept_service.py  database.py  decision_service.py  definition_service.py  explore_service.py  label_service.py  main.py  models.py  pyproject.toml  queue_service.py  schemas.py  standardize_txt.py
server/python/chat/: database.py  models.py
server/python/tests/: conftest.py  test_analysis.py  test_analysis_milestones.py  test_analysis_temporal_partial_failure.py  test_assignments.py  test_assist_endpoint.py  test_assist_rebuild_trigger.py  test_assist_service.py  test_binary_autolabel_persistence.py  test_binary_autolabel_rationale.py  test_binary_handoff.py  test_chatlog_id.py  test_concept_endpoints.py  test_concept_generation.py  test_concept_models.py  test_concept_retrieval.py  test_concept_service.py  test_decision_service.py  test_explore_scoring.py  test_handoff_flow.py  test_history_page.py  test_history_review.py  test_hybrid_sampling.py  test_infer_summaries.py  test_label_application_schema.py  test_label_management.py  test_label_mode.py  test_label_prediction_model.py  test_label_reorder.py  test_labels.py  test_merge_labels.py  (+17 more)
(+205 files in other folders)
