[project]
name = "chatsight-server"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlmodel>=0.0.21",
    "python-multipart>=0.0.12",
    "pydantic>=2.0.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.2",
    "google-genai>=1.66.0",
    "scikit-learn>=1.8.0",
    "numpy>=2.4.4",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
